Fix Working with Services and Data

--- a/BugTrackerUI/Pages/NewBug.razor
+++ b/BugTrackerUI/Pages/NewBug.razor
@@ -14,7 +14,7 @@
     public IBugService BugService { get; set; }
 
     [Inject]
-    NavigationManager NavService { get; set; }
+    public NavigationManager NavService { get; set; }
 
     public Bug AddBug { get; set; } = new Bug();
 
