--- a/BugTrackerUI/Components/BugList.razor
+++ b/BugTrackerUI/Components/BugList.razor
@@ -22,15 +22,13 @@
 
 @code {
     [Inject]
-    IBugService BugService { get; set; }
+    public IBugService BugService { get; set; }
 
     public List<Bug> Bugs { get; set; }
 
     protected override void OnInitialized()
     {
         Bugs = BugService.GetBugs().OrderBy(x => x.Priority).ToList();
-
-        base.OnInitialized();
     }
 
 }
